--- a/src/app/modules/login/pages/login-page/login-page.component.html
+++ b/src/app/modules/login/pages/login-page/login-page.component.html
@@ -10,10 +10,12 @@
         <mat-form-field appearance="outline">
           <mat-label>Login</mat-label>
           <input matInput placeholder="Login" formControlName="login">
+          <mat-error *ngIf="login.invalid">To pole jest wymagane!</mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Hasło</mat-label>
           <input matInput [type]="passwordInputType" placeholder="Hasło" formControlName="password">
+          <mat-error *ngIf="password.invalid">To pole jest wymagane!</mat-error>
           <mat-icon
             matSuffix
             class="show-password-icon"
@@ -24,7 +26,12 @@
       </mat-card-content>
       <mat-card-actions class="login-actions">
         <a href="">Zapomniałem hasła</a>
-        <button mat-raised-button color="primary">Zaloguj</button>
+        <button
+          mat-raised-button
+          color="primary"
+          [disabled]="loginForm.invalid && loginForm.touched"
+          (click)="onLogin()"
+        >Zaloguj</button>
       </mat-card-actions>
     </mat-card>
   </div>
