Create sidebar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div id="app">
-  <app-loading *ngIf="showLoadingIndicator"></app-loading>
+  <app-loading [show]="showLoadingIndicator"></app-loading>
   <router-outlet></router-outlet>
 </div>
