--- a/src/app/modules/login/pages/login-page/login-page.component.scss
+++ b/src/app/modules/login/pages/login-page/login-page.component.scss
@@ -15,6 +15,10 @@
       border-radius: 0;
     }
 
+    .mat-card-title {
+      text-transform: uppercase;
+    }
+
     .login-form {
       .mat-form-field {
         width: 100%;
