--- a/src/app/core/main/main.component.html
+++ b/src/app/core/main/main.component.html
@@ -1,8 +1,8 @@
-<div id="app-dashboard">
-  <mat-card class="dashboard-container">
+<div id="app-main">
+  <mat-card class="main-container">
     <app-side-bar></app-side-bar>
     <div class="main">
-      <div class="nav-bar"></div>
+      <app-top-bar></app-top-bar>
       <div class="content">
         <router-outlet></router-outlet>
       </div>
