--- a/src/app/modules/categories/pages/categories-page/categories-page.component.html
+++ b/src/app/modules/categories/pages/categories-page/categories-page.component.html
@@ -28,6 +28,15 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Data ostatniej modyfikacji. </th>
         <td mat-cell *matCellDef="let element"> {{element.updatedAt | date: 'd MMMM yyyy, HH:mm:ss' }} </td>
       </ng-container>
+      <ng-container matColumnDef="active">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Aktywna? </th>
+        <td mat-cell *matCellDef="let element">
+          <div class="cell-active">
+            <span *ngIf="element.active"><mat-icon color="primary">check</mat-icon> Tak</span>
+            <span *ngIf="!element.active"><mat-icon color="warn">close</mat-icon> Nie</span>
+          </div>
+        </td>
+      </ng-container>
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="header-align-right"> Akcje. </th>
         <td mat-cell *matCellDef="let element">
