Make search fab smaller

--- a/src/app/core/main/components/top-bar/top-bar.component.scss
+++ b/src/app/core/main/components/top-bar/top-bar.component.scss
@@ -6,6 +6,15 @@
 
   .search {
     margin-right: 10px;
+
+    .mat-mini-fab {
+      width: 32px;
+      height: 32px;
+
+      .mat-icon {
+        font-size: 18px;
+      }
+    }
   }
 
   .action-button {
