Add equipment page and equipment search component

--- a/src/app/modules/login/pages/login-page/login-page.component.scss
+++ b/src/app/modules/login/pages/login-page/login-page.component.scss
@@ -8,7 +8,7 @@
     max-width: 300px;
 
     .login-avatar {
-      background-image: url('../../../../../assets/images/logo.png');
+      background-image: url('/assets/images/logo.png');
       background-size: contain;
       background-position: center;
       background-repeat: no-repeat;
