--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 #app {
-  background-image: url('../assets/images/background.jpg');
+  background-image: url('/assets/images/background.jpg');
   background-size: cover;
   height: 100%;
 }
