--- a/src/app/core/main/components/side-bar/side-bar.component.scss
+++ b/src/app/core/main/components/side-bar/side-bar.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   box-shadow: 0 0 0.8rem 0.2rem rgba(0, 0, 0, 0.03), 0 1.6rem 2.4rem 0 rgba(0, 0, 0, 0.1);
   padding: 0 10px;
-  background: linear-gradient(to top,  rgba(255,255,255,0.85) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 100%), url('../../../../../assets/images/side-bar-background.jpg') bottom/150% no-repeat;
+  background: linear-gradient(to top,  rgba(255,255,255,0.85) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 100%), url('/assets/images/side-bar-background.jpg') bottom/150% no-repeat;
 
   .logo {
     display: flex;
