--- a/src/app/modules/categories/pages/categories-page/categories-page.component.html
+++ b/src/app/modules/categories/pages/categories-page/categories-page.component.html
@@ -17,7 +17,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Opis. </th>
         <td mat-cell *matCellDef="let element">
           <div class="cell-description">
-            {{element.description}}
+            {{element.description | nullOrEmpty:'-'}}
           </div>
         </td>
       </ng-container>
