--- a/src/app/modules/sets/components/add-set/add-set.component.scss
+++ b/src/app/modules/sets/components/add-set/add-set.component.scss
@@ -1,13 +1,9 @@
-#app-edit-category {
+#app-add-set {
   padding-bottom: 15px;
   width: 300px;
 
   h2 {
     margin-bottom: 5px;
-
-    .name {
-      opacity: 0.5;
-    }
   }
 
   form {
