--- a/src/app/modules/sets/pages/sets-list-page/sets-list-page.component.html
+++ b/src/app/modules/sets/pages/sets-list-page/sets-list-page.component.html
@@ -43,6 +43,9 @@
         <td mat-cell *matCellDef="let element">
           <div class="cell-actions">
             <button mat-icon-button>
+              <mat-icon (click)="onDetailsClick(element)" matTooltip="Podgląd">remove_red_eye</mat-icon>
+            </button>
+            <button mat-icon-button>
               <mat-icon (click)="onEditClick(element)" matTooltip="Edytuj">edit</mat-icon>
             </button>
             <button mat-icon-button>
