--- a/src/app/modules/sets/pages/sets-list-page/sets-list-page.component.html
+++ b/src/app/modules/sets/pages/sets-list-page/sets-list-page.component.html
@@ -38,6 +38,10 @@
           </div>
         </td>
       </ng-container>
+      <ng-container matColumnDef="membersCount">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Ilość elementów. </th>
+        <td mat-cell *matCellDef="let element"> {{element.membersCount }} </td>
+      </ng-container>
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="header-align-right"> Akcje. </th>
         <td mat-cell *matCellDef="let element">
