--- a/src/app/shared/components/image-upload/image-upload.component.scss
+++ b/src/app/shared/components/image-upload/image-upload.component.scss
@@ -1,10 +1,12 @@
 @import 'variables';
 
 #app-image-upload {
+  width: 100%;
+
   .image-upload {
     .dropzone {
       position: relative;
-      width: 400px;
+      width: 100%;
       height: 200px;
       background-color: $background-gray;
       border: 1px dashed $border-gray;
@@ -38,6 +40,7 @@
         min-width: 64px;
         line-height: 36px;
         padding: 0 16px;
+        margin-bottom: 12px;
         border-radius: 4px;
         background-color: $green;
         color: $white;
@@ -45,7 +48,38 @@
 
       p {
         text-align: center;
+
+        &.file-name {
+          width: 100%;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+      }
+
+      .processing {
+        opacity: 0.5;
+        margin-top: 30px;
+        position: absolute;
+        top: 50%;
+
+
+        &:after {
+          overflow: hidden;
+          display: inline-block;
+          vertical-align: bottom;
+          animation: ellipsis steps(4, end) 900ms infinite;
+          content: '\2026';
+          width: 0;
+          position: absolute;
+        }
       }
     }
+  }
+}
+
+@keyframes ellipsis {
+  to {
+    width: 20px;
   }
 }
