Add loading spinner for modal dialogs Add missing OnDestroy hooks

--- a/src/app/modules/equipment/components/add-equipment/add-equipment.component.html
+++ b/src/app/modules/equipment/components/add-equipment/add-equipment.component.html
@@ -1,4 +1,6 @@
 <div id="app-add-equipment">
-  <app-image-upload [id]="id" [type]="type" (upload)="onUpload($event)"></app-image-upload>
-  <app-image-list [images]="images" (delete)="onDelete($event)"></app-image-list>
+  <app-dialog>
+    <app-image-upload [id]="id" [type]="type" (upload)="onUpload($event)"></app-image-upload>
+    <app-image-list [images]="images" [modal]="true" (delete)="onDelete($event)"></app-image-list>
+  </app-dialog>
 </div>
