--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,4 +1,4 @@
 <div id="app-loading" *ngIf="show">
   <div class="overlay"></div>
-  <mat-spinner class="loading-spinner" color="primary"></mat-spinner>
+  <mat-spinner [diameter]="diameter" class="loading-spinner" color="primary"></mat-spinner>
 </div>
