--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ a {
 
 .mat-snack-bar-container {
   &.error {
-    background-color: var(--warn-color);;
+    background-color: var(--warn-color);
 
     .mat-simple-snackbar {
       span {
@@ -29,4 +29,8 @@ a {
       }
     }
   }
+}
+
+.mat-dialog-container {
+  padding: 0 !important;
 }
