Add image gallery Refactor year picker to separate component Refactoring

--- a/src/app/shared/components/image-list/image-list.component.html
+++ b/src/app/shared/components/image-list/image-list.component.html
@@ -10,7 +10,7 @@
       <div class="size">
         ({{ item.size| filesize }})
       </div>
-      <div class="actions">
+      <div class="actions" *ngIf="allowDelete">
         <mat-icon color="warn" matTooltip="Usuń" (click)="onDelete(item)">delete</mat-icon>
       </div>
     </li>
