--- a/src/app/modules/equipment/components/add-equipment/add-equipment.component.scss
+++ b/src/app/modules/equipment/components/add-equipment/add-equipment.component.scss
@@ -1,3 +1,32 @@
 #app-add-equipment {
-  width: 450px;
+  width: 800px;
+
+  h2 {
+    margin-bottom: 5px;
+  }
+
+  form {
+    .mat-dialog-content {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-column-gap: 20px;
+
+      .images {
+        .upload, .gallery {
+          margin-bottom: 10px;
+        }
+      }
+
+      .form {
+        .mat-form-field {
+          display: block;
+        }
+      }
+    }
+
+    .mat-dialog-actions {
+      display: flex;
+      justify-content: flex-end;
+    }
+  }
 }
