--- a/src/app/modules/equipment/pages/equipment-list-page/equipment-list-page.component.html
+++ b/src/app/modules/equipment/pages/equipment-list-page/equipment-list-page.component.html
@@ -28,7 +28,7 @@
       </ng-container>
       <ng-container matColumnDef="productionYear">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Rok produkcji. </th>
-        <td mat-cell *matCellDef="let element"> {{element.productionDate | nullOrEmpty:'-'}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.productionDate | date: 'yyyy' | nullOrEmpty:'-' }} </td>
       </ng-container>
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Kategoria. </th>
