--- a/src/app/shared/components/category-selector/category-selector.component.html
+++ b/src/app/shared/components/category-selector/category-selector.component.html
@@ -22,7 +22,7 @@
       <mat-label>{{ label }}</mat-label>
       <mat-select formControlName="selector">
         <mat-option>Brak</mat-option>
-        <mat-option *ngFor="let option of categories" [value]="option">{{ option.name }}</mat-option>
+        <mat-option *ngFor="let option of categories" [value]="option.id">{{ option.name }}</mat-option>
       </mat-select>
       <mat-error *ngIf="categoryControl.invalid && required">To pole jest wymagane!</mat-error>
     </mat-form-field>
